--- a/src/styles/elements/_page.scss
+++ b/src/styles/elements/_page.scss
@@ -15,6 +15,9 @@ body {
   margin: 0;
   height: 100%;
   display: flex;
+  max-width: 100vw;
+  max-height: 100vh;
+  overflow: hidden;
 }
 
 *::selection {
