make html for chat messages

--- a/src/app/_components/chat/chat.component.html
+++ b/src/app/_components/chat/chat.component.html
@@ -1,1 +1,14 @@
-<h1>chat work</h1>
+<div class="chat">
+    <!-- Header -->
+    <div class="chat__header">
+        <contact-profile></contact-profile>
+    </div>
+    <!-- messages -->
+    <div class="chat__content">
+        <messages></messages>
+    </div>
+    <!-- text input -->
+    <div class="chat__footer">
+        <message-input></message-input>
+    </div>
+</div>
