--- a/src/app/_components/chat/contact-profile/contact-profile.component.html
+++ b/src/app/_components/chat/contact-profile/contact-profile.component.html
@@ -1,3 +1,7 @@
-<p>
-  contact-profile works!
-</p>
+<div class="contact-profile">
+  <img src="../../../../assets/Stefan.png" alt="stefan" />
+  <p>Stefan Nesselhauf</p>
+  <div class="social__media">
+    <i *ngFor="let icon of social_icons" class="fa {{icon}}" aria-hidden="true"></i>
+  </div>
+</div>
