--- a/src/styles/settings/_colors.scss
+++ b/src/styles/settings/_colors.scss
@@ -8,7 +8,7 @@ $color-white: #ffffff;
 $color-text: #222222;
 $color-grey: rgba(230, 230, 230, 0.7);
 // Background Colors
-$bg-color-gray: #fafafa;
+$bg-color-gray: #f5f5f5;
 
 // Border
 $color-border: #ecf0f1;
