--- a/src/app/_components/home/home.component.html
+++ b/src/app/_components/home/home.component.html
@@ -1,93 +1,19 @@
-<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam consequuntur, voluptatem modi laudantium adipisci,
-  culpa dolorum vitae veritatis error atque suscipit blanditiis? Molestiae dolor at expedita error deleniti quisquam.
-  Aliquid!</p>
-<p>Quasi veritatis in asperiores fuga sit itaque hic minus soluta? Hic commodi, laudantium, quia cumque repellendus at
-  reiciendis libero eveniet, blanditiis tenetur voluptatum accusantium odio harum totam! Harum, quasi ullam?</p>
-<p>Veritatis eius reprehenderit quia? Dolor corporis perspiciatis consequuntur eius! Laborum ipsum qui dolore, beatae
-  repudiandae possimus, nulla atque dolorem non molestiae, hic aperiam ipsam rerum eius adipisci quia veritatis
-  officia.</p>
-<p>Odio, magnam explicabo fugit accusamus, a minus repellendus accusantium placeat necessitatibus incidunt, corrupti
-  minima. Corporis recusandae sapiente aut quidem nobis dolorum voluptate sint, quibusdam culpa eaque laborum ab, sed
-  omnis.</p>
-<p>Facere sequi ducimus mollitia ad animi autem vel ab velit, earum eos fuga sapiente error delectus nam! A doloremque,
-  adipisci aperiam corrupti eveniet blanditiis, excepturi libero voluptas eligendi dicta quidem.</p>
-<p>Dolores in dicta dolore temporibus officiis dolor omnis eum explicabo ipsa possimus, earum, mollitia officia
-  laboriosam, fugit eius eligendi magni ducimus tempore fuga ea neque autem quia? Cupiditate, sint reiciendis.</p>
-<p>Sapiente id dolorum impedit illo exercitationem harum, illum consectetur sit suscipit. Tempore rerum quas vel, quam
-  nesciunt ab minus et. Laudantium quia quibusdam officiis corrupti similique animi iure officia aut?</p>
-<p>Consectetur ipsam aliquid natus iure eum eius! Provident dicta soluta eos omnis iusto magni dolor nesciunt nisi
-  numquam tempore! Necessitatibus sit cum minima quasi possimus officia minus, aliquam ipsam itaque?</p>
-<p>Vitae iusto sapiente error esse? Necessitatibus odit aliquid nesciunt vitae. Ad sint totam repudiandae consectetur
-  provident sunt asperiores earum quisquam, impedit id, explicabo ab maiores repellendus corporis hic sit atque!</p>
-<p>Animi, facilis quaerat nisi minima numquam consectetur natus earum. Deserunt ducimus velit nobis nihil error
-  explicabo in laborum est minus? Fugit expedita culpa quasi sequi nesciunt vitae provident, doloribus minima!</p>
-<p>Dolores modi corrupti quis perferendis repellendus maxime voluptatum asperiores accusantium dolor veritatis iste aut
-  officia tempora culpa eveniet totam accusamus quidem soluta doloremque, voluptate alias nesciunt in! Provident,
-  corporis qui?</p>
-<p>Cumque corporis officia autem quae? Numquam quaerat maxime repellendus officia sint explicabo, obcaecati pariatur
-  porro natus molestiae nulla nam enim fuga minus quas quia! Voluptas fugiat dolore dolor quasi perferendis?</p>
-<p>Autem consequuntur id ex, laudantium, culpa sequi, accusantium aliquam nesciunt facere vel corporis! Tenetur
-  consequatur laborum dolores laboriosam a, velit rerum veritatis natus officiis autem enim? Delectus nesciunt
-  exercitationem eum?</p>
-<p>Error provident aspernatur labore eligendi pariatur itaque repellendus aliquam, magni illum in deleniti ut vitae
-  rerum voluptatibus molestias velit! Neque quo quidem reiciendis saepe. Voluptas voluptate suscipit animi veniam.
-  Laboriosam!</p>
-<p>Facilis dolores iste facere doloremque quia libero nihil, porro id illo laudantium pariatur, eos, rerum dolore
-  molestias distinctio? Doloremque eius eaque blanditiis ex nam provident unde, consequatur non a nisi!</p>
-<p>Saepe fugit voluptatum ipsam illo necessitatibus quas vero deserunt! Nisi doloribus non omnis. Sequi necessitatibus
-  a consectetur consequuntur rem, nam animi laborum vero repellendus expedita incidunt libero, maxime enim ducimus.</p>
-<p>Praesentium repellendus ex incidunt vitae voluptatibus cupiditate tempora libero nam alias, a aperiam fugit fuga
-  excepturi iure, magni suscipit sit illo perspiciatis quidem, consequatur optio debitis dolorum illum itaque? Debitis.</p>
-<p>Minima ea eius explicabo! Eligendi aspernatur quas libero, dolor debitis ex inventore ducimus harum perspiciatis
-  deserunt consequuntur hic quod iure sed magnam eum, suscipit reprehenderit ratione iste aperiam quia amet.</p>
-<p>Facere ratione necessitatibus magnam atque a. Mollitia soluta numquam esse natus ipsam perferendis nulla placeat
-  qui, cupiditate eveniet, consequatur blanditiis laudantium voluptas ex? Nostrum id magni fuga quia nobis tempore!</p>
-<p>Quos perferendis nam illum sapiente laboriosam amet aliquid optio magni veritatis consequatur dolorem molestiae
-  reiciendis, impedit quo eos nisi veniam dicta temporibus assumenda debitis facilis ducimus fugiat, exercitationem
-  similique! Illum!</p>
-<p>Est obcaecati et eligendi! Provident quis temporibus rerum quam ab magni exercitationem, similique repudiandae
-  dolores sapiente, a sunt molestias libero nisi perspiciatis beatae? Accusamus totam autem aliquam hic, ipsum magnam.</p>
-<p>Illo labore hic esse quas assumenda amet vel placeat maiores voluptatem. Vitae nihil repellendus iusto porro alias
-  eaque quae asperiores ipsum modi. Illo repudiandae necessitatibus delectus. Dolor ex obcaecati ullam.</p>
-<p>Laborum esse consequuntur vel alias animi et cum soluta. Earum dolore rerum nulla, harum fugiat nobis quo voluptate
-  corporis, eaque ipsam, aut corrupti asperiores. Saepe obcaecati dolorem culpa nam excepturi?</p>
-<p>Sint quod vero exercitationem odio numquam itaque suscipit nam eaque adipisci tenetur. Sequi atque similique velit
-  explicabo accusamus rerum, quisquam reiciendis amet dolores qui esse dicta quos fuga dolorum et?</p>
-<p>Dolore consequatur, voluptatum repellat tempore assumenda enim? Et, necessitatibus maiores. Repudiandae optio
-  quisquam debitis aspernatur quos? Optio voluptates voluptate iste assumenda, pariatur quasi aliquam ipsa fugit harum
-  tempore nulla odio.</p>
-<p>Impedit suscipit ipsum dolorum magni ipsam sunt ut illo, quisquam facilis consequuntur voluptatibus doloremque
-  repellat ratione modi. Delectus perspiciatis dolor impedit possimus et laboriosam saepe? Cum cumque ut iure aliquam.</p>
-<p>Eos architecto sed, praesentium beatae earum necessitatibus molestias velit, laudantium dolore mollitia vel qui
-  ducimus culpa possimus non quibusdam nemo quia pariatur? Excepturi minus nihil quibusdam commodi eum similique
-  facilis.</p>
-<p>Sint, architecto! Voluptates ut minima possimus a ipsa facere accusamus dolores, consequuntur repudiandae nulla
-  rerum id qui cum molestiae quia laudantium, cupiditate itaque doloremque quos? Error dolore voluptas dolor veritatis?</p>
-<p>Excepturi itaque laborum accusamus qui nobis vel tempora vitae, dolores quas deleniti accusantium, sunt magnam
-  assumenda officiis ab exercitationem voluptas dolorem sed expedita iste provident unde, aspernatur reprehenderit
-  architecto. Velit.</p>
-<p>Ipsum molestiae doloribus ipsa id voluptatum rerum expedita incidunt sequi neque, dignissimos ut est, assumenda
-  saepe autem sapiente deserunt magnam? Incidunt excepturi qui, natus nesciunt neque iure ex laudantium vero?</p>
-<p>Enim, consequatur quos nulla vero delectus accusantium hic id ad, debitis dicta tempore odio? Error quod sed quae,
-  quidem tempore ad iste nulla soluta ullam, officia magnam molestiae, consequuntur in?</p>
-<p>Quasi reiciendis delectus impedit libero cumque voluptas sapiente amet dicta provident, eaque ullam, autem odit hic
-  vitae commodi praesentium quia quisquam dolorum ab rem error iste adipisci sint! Neque, magnam?</p>
-<p>Eligendi, deserunt soluta velit cumque earum praesentium itaque iste culpa doloremque cupiditate aperiam et
-  provident maxime iure. Vitae dolores et ratione quas cum tenetur eaque voluptate neque, sequi, incidunt sit.</p>
-<p>Quis sequi voluptatem debitis commodi maiores recusandae accusamus illum alias! Repellat corrupti corporis minus
-  tempore quas quasi vitae facilis temporibus praesentium dicta! In deleniti facilis fugiat perferendis perspiciatis
-  accusantium ducimus?</p>
-<p>Ipsum corrupti, cumque quia tempore odit fugit magni! Ducimus ad minima sint, placeat quidem itaque natus
-  dignissimos praesentium harum. Sit consectetur eligendi dolore quis facilis nam fugit vitae in nostrum.</p>
-<p>Sed, praesentium. Repudiandae sed libero molestiae accusantium ab. Quaerat, iste. Ipsa, incidunt ad excepturi
-  accusamus beatae temporibus ex impedit at voluptatibus numquam quibusdam. Ducimus, veniam reprehenderit ea hic
-  perferendis optio?</p>
-<p>Iste earum unde delectus debitis quis facilis neque quas tempore ipsa. Illo, recusandae eius saepe nisi quos ut quia
-  placeat dolorum aliquid? Minus consequuntur est laborum earum! Molestiae, atque dignissimos!</p>
-<p>Illo possimus eius veritatis libero, fugit quas tenetur nihil totam incidunt neque reprehenderit id, iusto modi vel
-  rerum labore eaque sit porro quam, adipisci nemo! Unde quos magnam beatae aut!</p>
-<p>Beatae voluptates nisi nostrum exercitationem aliquam, ex ullam, inventore hic tempora facere minus blanditiis
-  perspiciatis nulla fuga molestiae enim nobis. Perspiciatis itaque harum earum nihil ex eum ratione nobis laboriosam?</p>
-<p>Obcaecati error repudiandae eveniet, fugiat, ducimus aut sint repellat incidunt iure deserunt expedita eos saepe
-  aliquid exercitationem, natus suscipit est repellendus iusto dolorum libero architecto facere? Ullam non doloribus
-  assumenda.</p>
+<ng-template #welcome>
+  <div class="weclome-message">
+    <h1>Welcome ....</h1>
+  </div>
+</ng-template>
+<div class="contacts" *ngIf="users; else welcome ">
+  <ul>
+    <li class="contact" *ngFor="let user of users; let isFirst = first" [class.active]="isFirst">
+      <div class="wrap">
+        <span class="contact__status {{user.contact_status}}"></span>
+        <img class="contact__img" [src]="user.contact_image" [alt]="user.contact_name" />
+        <div class="contact__meta">
+          <p class="contact__name">{{user.contact_name}}</p>
+          <p class="contact__preview">{{user.contact_perview}}</p>
+        </div>
+      </div>
+    </li>
+  </ul>
+</div>
