--- a/src/app/_components/chat/messages/messages.component.scss
+++ b/src/app/_components/chat/messages/messages.component.scss
@@ -13,7 +13,7 @@
     clear: both;
     margin: 15px 15px 5px 15px;
     width: calc(100% - 25px);
-    font-size: 1.3rem;
+    font-size: 1.4rem;
     &:nth-last-child(1) {
       margin-bottom: 20px;
     }
@@ -22,32 +22,64 @@
       border-radius: 50%;
       float: left;
     }
-    p {
-      display: inline-block;
-      padding: 10px 15px;
-      border-radius: 20px;
-      max-width: 220px;
-      line-height: 130%;
+    .message__container {
+      display: flex;
+      flex-direction: column;
+      p {
+        display: inline-block;
+        padding: 10px 15px;
+        border-radius: 20px;
+        max-width: 220px;
+        min-width: 220px;
+        line-height: 130%;
+      }
+      .message___meta {
+        display: flex;
+        min-width: 220px;
+        max-width: 220px;
+        justify-content: space-between;
+        h5 {
+          margin: 0px 15px;
+        }
+        span {
+          position: relative;
+          top: -5px;
+        }
+      }
     }
   }
   ul li.sent {
     margin-left: 0;
+
     img {
       margin: 6px 8px 0 0;
     }
     p {
-      background: #435f7a;
+      background: $color-brand;
       color: #f5f5f5;
+    }
+    span {
+      text-align: left;
     }
   }
   ul li.replies {
     margin-right: 0;
+    .message__container {
+      align-items: flex-end;
+      .message___meta {
+        flex-direction: row-reverse;
+      }
+    }
     img {
-      float: right;
       margin: 6px 0 0 8px;
     }
     p {
       background: #f5f5f5;
+    }
+    h5,
+    span,
+    img,
+    p {
       float: right;
     }
   }
