--- a/src/app/_components/home/home.component.scss
+++ b/src/app/_components/home/home.component.scss
@@ -66,6 +66,10 @@
         }
         .contact__meta {
           padding: 5px 0 0 0;
+          @media screen and (max-width: 735px) {
+            position: relative;
+            left: 10px;
+          }
           .contact__name {
             font-weight: $font-weight-bold;
             text-transform: uppercase;
