--- a/src/app/_components/chat/contact-profile/contact-profile.component.html
+++ b/src/app/_components/chat/contact-profile/contact-profile.component.html
@@ -1,6 +1,6 @@
 <div class="contact-profile">
-  <img src="../../../../assets/Birte.png" alt="stefan" />
-  <p>Birte Dittweiler Gerber</p>
+  <img src="../../../../assets/images/face-1.jpg" alt="stefan" />
+  <p>Hamza Mohammed</p>
   <div class="social__media">
     <i *ngFor="let icon of social_icons" class="fa {{icon}}" aria-hidden="true"></i>
   </div>
